--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                                 Address:
                             </h5>
                             <p class="mbr-text align-left mbr-fonts-style display-7">
-                                6507 WOODMAN AVE APT 101, VAN NUYS, CA, USA
+                                30 N Gould St Ste R Sheridan, WY 82801, USA
                             </p>
                         </div>
                     </div>
